--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b97639225c.js" crossorigin="anonymous"></script>
-    <title>Vite + React</title>
+    <title>Pokedex</title>
   </head>
   <body>
     <div id="root"></div>
